react-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-rs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - image: my-react-app:v0.0.1
          name: react
          ports:
            - containerPort: 8082


---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: react
  type: NodePort
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 32000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-dl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - image: spring-boot-demo:v0.0.1
          name: react
          ports:
            - containerPort: 8080
