Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: hello
                port:
                  number: 8082
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: spring
                port:
                  number: 8080
